fix: update topbar link styles for better visibility and accessibility

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -53,6 +53,11 @@ span {
     background-color: var(--pink);
 }
 
+.topbar a{
+    color: var(--white) !important;
+    text-decoration: underline !important;
+}
+
 .btn-dark{
     background-color: var(--pink) !important;
     border-color: var(--pink) !important;
